--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-paper-plane text-white mb-3 sr-icons"></i>
-              <h3 class="mb-3 text-white">Creating Community and Communicate</h3>
+              <h3 class="mb-3 text-white">Creating Community</h3>
               <p class="mb-0 text-white">Our target is Korean Blockchain Enthusiast</p>
             </div>
           </div>
