--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="row">
           <div class="col-lg-9 mx-auto">
             <h1 class="text-uppercase">
-              <strong>We Are Kryptico. maybe your project need us</strong>
+              <strong>Create virtuous circle in blockchain with YOUR project</strong>
             </h1>
             <hr>
           </div>
