--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Kryptico</a>
+        <img class="img-fluid" src="img/logo1.png" href="#page-top">
+        
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,7 +60,7 @@
         <div class="row">
           <div class="col-lg-9 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Create virtuous circle in blockchain with YOUR project</strong>
+              <strong>We Are Kryptico. CREATE VIRTUOUS CIRCLE IN BLOCKCHAIN WITH YOUR PROJECT</strong>
             </h1>
             <hr>
           </div>
@@ -105,7 +106,7 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-paper-plane text-white mb-3 sr-icons"></i>
-              <h3 class="mb-3 text-white">Creating Community</h3>
+              <h3 class="mb-3 text-white">Creating Community and Communicate</h3>
               <p class="mb-0 text-white">Our target is Korean Blockchain Enthusiast</p>
             </div>
           </div>
@@ -546,13 +547,13 @@
             <p class="mb-5">We are always ready to help you.</p>
           </div>
         </div>
-          <div class="col-lg-4 mr-auto text-center">
+          <div class="col-lg-4 mx-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="mailto:contact@kryptico.kr">contact@kryptico.kr</a>
             </p>
           </div>
-        </div>
+          </div>
       </div>
     </div>
     </section>
