--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h2 class="section-heading text-white text-center">Portfolios</h2>
               <div class="container-fluid p-0">
           <div class="row no-gutters popup-gallery">
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://www.ankr.network/">
               <img class="img-fluid" src="img/portfolio/thumbnails/ankr.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -148,7 +148,7 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://cryptocurve.io">
               <img class="img-fluid" src="img/portfolio/thumbnails/cryptocurve.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -161,7 +161,7 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://sparkster.me/">
               <img class="img-fluid" src="img/portfolio/thumbnails/sparkster.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -174,7 +174,7 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://dispatchlabs.io/">
               <img class="img-fluid" src="img/portfolio/thumbnails/Dispatch.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -187,7 +187,7 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://www.orchid.com/">
               <img class="img-fluid" src="img/portfolio/thumbnails/orchid.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -201,7 +201,7 @@
           </div>
 
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://quadrantprotocol.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/quadrant.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -214,7 +214,7 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://edenchain.io">
               <img class="img-fluid" src="img/portfolio/thumbnails/eden.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -227,7 +227,7 @@
             </a>
           </div>
 
-                    <div class="col-lg-3 col-sm-3">
+                    <div class="col-3">
              <a class="portfolio-box" href="https://pchain.org">
               <img class="img-fluid" src="img/portfolio/thumbnails/PCHAIN.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -240,7 +240,7 @@
             </a>
           </div>
 
-                    <div class="col-lg-3 col-sm-3">
+                    <div class="col-3">
              <a class="portfolio-box" href="https://neurochaintech.io">
               <img class="img-fluid" src="img/portfolio/thumbnails/nc.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -253,7 +253,7 @@
             </a>
           </div>
 
-                    <div class="col-lg-3 col-sm-3">
+                    <div class="col-3">
              <a class="portfolio-box" href="https://persona.im">
               <img class="img-fluid" src="img/portfolio/thumbnails/persona.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -266,7 +266,7 @@
             </a>
           </div>
 
-                    <div class="col-lg-3 col-sm-3">
+                    <div class="col-3">
              <a class="portfolio-box" href="https://oceanprotocol.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/op.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -279,7 +279,7 @@
             </a>
           </div>
 
-                    <div class="col-lg-3 col-sm-3">
+                    <div class="col-3">
              <a class="portfolio-box" href="https://pundix.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/npxs.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -292,7 +292,7 @@
             </a>
           </div>
 
-                              <div class="col-lg-3 col-sm-3">
+                              <div class="col-3">
              <a class="portfolio-box" href="https://ink.one">
               <img class="img-fluid" src="img/portfolio/thumbnails/ink.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -305,7 +305,7 @@
             </a>
           </div>
 
-                              <div class="col-lg-3 col-sm-3">
+                              <div class="col-3">
              <a class="portfolio-box" href="https://ripiocredit.network">
               <img class="img-fluid" src="img/portfolio/thumbnails/rcn.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -318,7 +318,7 @@
             </a>
           </div>
 
-                              <div class="col-lg-3 col-sm-3">
+                              <div class="col-3">
              <a class="portfolio-box" href="https://blockmason.io">
               <img class="img-fluid" src="img/portfolio/thumbnails/blockmason.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -331,7 +331,7 @@
             </a>
           </div>
 
-                              <div class="col-lg-3 col-sm-3">
+                              <div class="col-3">
              <a class="portfolio-box" href="https://request.network">
               <img class="img-fluid" src="img/portfolio/thumbnails/req.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -344,7 +344,7 @@
             </a>
           </div>
 
-                              <div class="col-lg-3 col-sm-3">
+                              <div class="col-3">
              <a class="portfolio-box" href="https://wanchain.org">
               <img class="img-fluid" src="img/portfolio/thumbnails/wan.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -357,7 +357,7 @@
             </a>
           </div>
 
-                              <div class="col-lg-3 col-sm-3">
+                              <div class="col-3">
              <a class="portfolio-box" href="https://smartcontract.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/chainlink.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -370,7 +370,7 @@
             </a>
           </div>
 
-                              <div class="col-lg-3 col-sm-3">
+                              <div class="col-3">
              <a class="portfolio-box" href="https://streamr.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/streamr.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -383,7 +383,7 @@
             </a>
           </div>
 
-                              <div class="col-lg-3 col-sm-3">
+                              <div class="col-3">
              <a class="portfolio-box" href="https://redpulse.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/rpx.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -396,7 +396,7 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://cindicator.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/cindy.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -410,7 +410,7 @@
           </div>
 
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://po.et">
               <img class="img-fluid" src="img/portfolio/thumbnails/poet.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -424,7 +424,7 @@
           </div>
 
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://enigma.co">
               <img class="img-fluid" src="img/portfolio/thumbnails/enigma.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -438,7 +438,7 @@
           </div>
 
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://dmakret.io">
               <img class="img-fluid" src="img/portfolio/thumbnails/dmt.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -451,7 +451,7 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://propy.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/propy.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -464,7 +464,7 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://kyber.network">
               <img class="img-fluid" src="img/portfolio/thumbnails/kyber.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -477,7 +477,7 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://0xproject.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/zrx.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -490,7 +490,7 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://distric0x.io">
               <img class="img-fluid" src="img/portfolio/thumbnails/dzrx.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -503,7 +503,7 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://aeternity.com">
               <img class="img-fluid" src="img/portfolio/thumbnails/ae.jpg" alt="">
               <div class="portfolio-box-caption">
@@ -516,7 +516,7 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-sm-3">
+          <div class="col-3">
              <a class="portfolio-box" href="https://ark.io">
               <img class="img-fluid" src="img/portfolio/thumbnails/ark.jpg" alt="">
               <div class="portfolio-box-caption">
